--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.109.1
-uvicorn==0.27.0
-python-dotenv==1.0.0
-twilio==10.0.0
-sqlalchemy==2.0.25
-psycopg2-binary==2.9.9  # For PostgreSQL (Render's default)
+fastapi
+uvicorn
+sqlalchemy
+pydantic
+python-dotenv
+twilio
+psycopg2-binary
